[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Vogue.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://settings_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="settings_menu" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -343.0
margin_top = -230.0
margin_right = 307.0
margin_bottom = 170.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="SettingsTab" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -344.0
margin_top = -231.0
margin_right = 306.0
margin_bottom = 169.0
tab_align = 0

[node name="Video" type="Tabs" parent="SettingsTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_close_display_policy = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTab/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -7.0
margin_right = 4.0
margin_bottom = -2.0

[node name="VideoSettings" type="GridContainer" parent="SettingsTab/Video/MarginContainer"]
margin_right = 690.0
margin_bottom = 409.0
custom_constants/vseparation = 20
columns = 2

[node name="ScreenMode" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
margin_right = 254.0
margin_bottom = 36.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Display Mode"

[node name="OptionButton" type="OptionButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
margin_left = 258.0
margin_right = 690.0
margin_bottom = 36.0
size_flags_horizontal = 11
text = "Window"
items = [ "Window", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Brightness" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
margin_top = 56.0
margin_right = 254.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
margin_left = 258.0
margin_top = 56.0
margin_right = 690.0
margin_bottom = 92.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 9
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="Tabs" parent="SettingsTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer2" type="MarginContainer" parent="SettingsTab/Audio"]
margin_right = 40.0
margin_bottom = 40.0

[node name="AudioSettings" type="GridContainer" parent="SettingsTab/Audio/MarginContainer2"]
margin_right = 400.0
margin_bottom = 116.0

[node name="MasterVol" type="Label" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
margin_right = 400.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
value = -15.0
rounded = true

[node name="MusicVol" type="Label" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
margin_top = 100.0
margin_right = 400.0
margin_bottom = 116.0
min_value = -50.0
max_value = 0.0
value = -15.0
rounded = true

[connection signal="item_selected" from="SettingsTab/Video/MarginContainer/VideoSettings/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="SettingsTab/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_BrightnessSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer2/AudioSettings/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer2/AudioSettings/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
